edit about and include resume pdf

--- a/index.html
+++ b/index.html
@@ -48,8 +48,8 @@
           <h1 class="title">Kevin Won</h1>
           <p class="section__text__p2">Developer/Designer</p>
           <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/resume-example.pdf')">Download CV</button>
-            <button class="btn btn-color-1" onclick="location.href='./#contact'">Contact Info</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Resume 2023-Dev.pdf')">Download CV</button>
+            <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
           </div>
           <div id="socials-container">
             <img src="./assets/linkedin.png" alt="My Linkedin profile" class="icon" onclick="location.href='https://linkedin.com/in/kevinwonart/'">
@@ -80,7 +80,9 @@
             </div>
           </div>
           <div class="text-container">
-            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labor e et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in cu lpa qui officia deserunt mollit anim id est laborum.</p>
+            <p>Hello, I'm a creative technologist emerging from the world of traditional arts and historical studies. My journey into tech starts with my History B.A. degree from the University of Texas at Austin. I have an innate appreciation for the layers and narratives of human experiences that shape our world. This historical perspective enriches my design philosophy as I seek to build projects that are robust and resonate across time.</p>
+            <p>Secondly, I have taught myself to draw and paint and am a certificate recipient of drawing from the Texas Academy of Figurative Art which focuses on the timelessness of classical art training in figurative and portraiture art. I am well-versed in digital and traditional mediums and am fluent in contemporary and classical realism. I bring my discipline as an artist and translate it into technical craftsmanship.</p>
+            <p>My relentless curiosity and passion for learning is a driving force for what I do. I bring these qualites to my work as I bridge art and technology together into your business or project.</p>
           </div>
         </div>
       </div>
@@ -124,14 +126,14 @@
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
                 <div>
                   <h3>NodeJS</h3>
-                  <p>Intermediate</p>
+                  <p>Beginner</p>
                 </div>
               </article>
               <article>
                 <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
                 <div>
                   <h3>Git</h3>
-                  <p>Intermediate</p>
+                  <p>Beginner</p>
                 </div>
               </article>
             </div>
@@ -149,12 +151,12 @@
           <div class="article-container">
             <img src="./assets/project-1.png" alt="Project 1" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Project One</h2>
+          <h2 class="experience-sub-title project -title">Vacant Project One</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Live Demo
             </button>
           </div>
@@ -164,12 +166,12 @@
           <div class="article-container">
             <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Project Two</h2>
+          <h2 class="experience-sub-title project -title">Vacant Project Two</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Live Demo
             </button>
           </div>
@@ -179,12 +181,12 @@
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Project Three</h2>
+          <h2 class="experience-sub-title project -title">Vacant Project Three</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
               Live Demo
             </button>
           </div>
