more edit: about page

--- a/index.html
+++ b/index.html
@@ -80,8 +80,8 @@
             </div>
           </div>
           <div class="text-container">
-            <p>Hello, I'm a creative technologist emerging from the world of traditional arts and historical studies. My journey into tech starts with my History B.A. degree from the University of Texas at Austin. I have an innate appreciation for the layers and narratives of human experiences that shape our world. This historical perspective enriches my design philosophy as I seek to build projects that are robust and resonate across time.</p>
-            <p>Secondly, I have taught myself to draw and paint and am a certificate recipient of drawing from the Texas Academy of Figurative Art which focuses on the timelessness of classical art training in figurative and portraiture art. I am well-versed in digital and traditional mediums and am fluent in contemporary and classical realism. I bring my discipline as an artist and translate it into technical craftsmanship.</p>
+            <p>Hello, I'm a creative technologist emerging from the world of traditional arts and historical studies. I have an appreciation for the layers and narratives of human experiences that shape our world. This historical perspective enriches my philosophy as I seek to build projects that are robust and resonate across time.</p>
+            <p>Secondly, I am a trained artist and am well-versed in digital and traditional mediums. I am fluent in realistic art styles. I take my discipline as an artist and translate it into technical craftsmanship.</p>
             <p>My relentless curiosity and passion for learning is a driving force for what I do. I bring these qualites to my work as I bridge art and technology together into your business or project.</p>
           </div>
         </div>
