--- a/index.html
+++ b/index.html
@@ -117,6 +117,13 @@
                   <p>Intermediate</p>
                 </div>
               </article>
+              <article>
+                <div>
+                  <img src="./assets/checkmark.png" alt="Experience icon" class="icon"/>
+                  <h3>ReactJS</h3>
+                  <p>Intermediate</p>
+                </div>
+              </article>
             </div>
           </div>
           <div class="details-container">
@@ -149,19 +156,20 @@
         <div class="about-containers">
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-1.png" alt="Project 1" class="project-img"/>
+            <img src="./assets/tictactoe.png" alt="tictactoe" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Vacant Project One</h2>
+          <h2 class="experience-sub-title project -title">Minimax TicTacToe React</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart/tictactoe'"></btn>
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://tictactoe-zeta-six.vercel.app/'"></btn>
               Live Demo
             </button>
           </div>
         </div>
 
+      <!--
         <div class="details-container color-container">
           <div class="article-container">
             <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
@@ -176,7 +184,9 @@
             </button>
           </div>
         </div>
+      -->
 
+      <!--
         <div class="details-container color-container">
           <div class="article-container">
             <img src="./assets/project-3.png" alt="Project 3" class="project-img"/>
@@ -191,6 +201,8 @@
             </button>
           </div>
         </div>
+      -->
+
         </div>
       </div>
       <img src="./assets/arrow.png" alt"Arrow icon" class="icon arrow" onclick="window.location.href='#contact'"/>
