--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="title">Kevin Won</h1>
           <p class="section__text__p2">Developer/Designer</p>
           <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/Resume 2023-Dev.pdf')">Download CV</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Kevin Won Resume 2024-FrontEnd.pdf')">Download CV</button>
             <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
           </div>
           <div id="socials-container">
@@ -169,39 +169,35 @@
           </div>
         </div>
 
-      <!--
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-2.png" alt="Project 2" class="project-img"/>
+            <img src="./assets/Odin Landing Page.png" alt="Project 2" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Vacant Project Two</h2>
+          <h2 class="experience-sub-title project -title">Landing Page Basic HTML/CSS</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart/odinproj/tree/main/landingpage'"></btn>
               Github
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://odinproj.vercel.app/'"></btn>
               Live Demo
             </button>
           </div>
         </div>
-      -->
 
-      <!--
         <div class="details-container color-container">
           <div class="article-container">
-            <img src="./assets/project-3.png" alt="Project 3" class="project-img"/>
+            <img src="./assets/kevin-won-linedeckerfinal.jpg" alt="Project 3" class="project-img"/>
           </div>
-          <h2 class="experience-sub-title project -title">Vacant Project Three</h2>
+          <h2 class="experience-sub-title project -title">Past Art Work</h2>
           <div class="btn-container">
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
-              Github
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.artstation.com/kevinwonart'"></btn>
+              Artstation
             </button>
-            <button class="btn btn-color-2 project-btn" onclick="location.href='https://github.com/kevinwonart'"></btn>
+            <button class="btn btn-color-2 project-btn" onclick="location.href='https://www.artstation.com/kevinwonart'"></btn>
               Live Demo
             </button>
           </div>
         </div>
-      -->
 
         </div>
       </div>
