--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
           <h1 class="title">Kevin Won</h1>
           <p class="section__text__p2">Developer/Designer</p>
           <div class="btn-container">
-            <button class="btn btn-color-2" onclick="window.open('./assets/Kevin Won Resume 2024-FrontEnd.pdf')">Download CV</button>
+            <button class="btn btn-color-2" onclick="window.open('./assets/Web_Development_Resume.pdf')">Download CV</button>
             <button class="btn btn-color-1" onclick="location.href='#contact'">Contact Info</button>
           </div>
           <div id="socials-container">
