--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
 
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="linkedin icon" class="icon contact-icon"/>
-          <p><a href="https://www.linkedin.com/in/kevinwonart">LinkedIn@kevinwonart.com</a></p>
+          <p><a href="https://www.linkedin.com/in/kevinwonart">linkedin.com/kevinwonart</a></p>
         </div>
       </div>
     </section>
