--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Kevin Won Art</title>
     <link rel="stylesheet" href="style.css" />
     <link rel="stylesheet" href="mediaqueries.css" />
+    <link rel="icon" href="./assets/icon.png">
   </head>
   <body>
 	  <nav id="desktop-nav">
